--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ chardet==3.0.4
 Django==2.2.5
 django-filter==2.2.0
 djangorestframework==3.10.3
+djangorestframework-jwt==1.11.0
 idna==2.8
 Markdown==3.1.1
 mysqlclient==1.4.4
 psycopg2-binary==2.8.3
+PyJWT==1.7.1
 pytz==2019.2
 requests==2.22.0
 sqlparse==0.3.0
